2015/rust/target/debug/build/anyhow-5ee6c825eeb3a977/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/haochuan/code/advent-of-code/2015/rust/target/debug/build/anyhow-5ee6c825eeb3a977/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
